<resources>
    <string name="app_name">beautician</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_may_be">May be</string>
    <string name="lbl_no">No</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_cancel_capitial">Cancel</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_cancelled">Canceled</string>
    <string name="lbl_provider">Providers</string>
    <string name="lbl_provider_detail">Providers Details</string>
    <string name="lbl_sr">SR</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_my_services">My Services</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_my_calender">My Calender</string>
    <string name="lbl_buy_ads">Buy Ads</string>
    <string name="lbl_become_a_provider">Become a Beauty Provider</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_change_lang">Change Language</string>
    <string name="lbl_disable_account">Disable</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_login_with">Login With</string>
    <string name="lbl_register">Sign-Up</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="hint_email_mobile">Email-Id or Mobile Number</string>
    <string name="hint_username">User Name</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="lbl_no_account">Don\'t have an account yet?</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_book_an_appointment">Book an appointment</string>
    <string name="lbl_signup">SIGN-UP</string>
    <string name="lbl_forgot_password_with_q">Forgot Password?</string>
    <string name="lbl_dont_account">Don\'t have account yet?</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="lbl_request_a_verification_code">Request a verification code</string>
    <string name="hint_verify_code">Verify Code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_by_sign_up_you_accept_privacy_policy_use_policy">by signup you Accept </string>
    <string name="lbl_by_sign_up_privacy_policy"> Privacy Policy</string>
    <string name="lbl_by_sign_up_use_policy"> Use Policy</string>
    <string name="lbl_by_sign_up_and">&amp;</string>
    <string name="lbl_set_new_password">Set New Password</string>
    <string name="lbl_rotate">Rotate</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_accept_terms">Accept Terms &amp; Conditions</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_change_my_password">Change My Password</string>
    <string name="lbl_save">Save</string>
    <string name="hint_email">email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_enter_new_emailid">Email ID</string>
    <string name="hint_enter_mobile_no">Mobile Number (9669988667755). </string>
    <string name="hint_enter_new_username">Enter full name</string>
    <string name="lbl_edit_username">Edit Username</string>
    <string name="lbl_edit_emial">Edit Email</string>
    <string name="lbl_edit_mobile">Edit Mobile</string>
    <string name="lbl_satisfaction">Satisfaction:</string>
    <string name="lbl_commitment">Commitment:</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_report_user">user</string>
    <string name="lbl_report_comment">comment</string>
    <string name="lbl_report_service">service</string>
    <string name="lbl_report_offensive">offensive</string>
    <string name="lbl_report_out_topic">out of topic</string>
    <string name="lbl_report_other">other</string>
    <string name="hint_enter_your_comment">Enter your comment</string>
    <string name="lbl_report_on_provider">Report Provider</string>
    <string name="lbl_report_on_service">Report Service</string>
    <string name="lbl_share_on">Sharing on</string>
    <string name="lbl_whatsapp">WhatsApp</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_twitter">Twitter</string>
    <string name="lbl_instagram">Instagram</string>
    <string name="lbl_distance_range">Distance Range - %1s km</string>
    <string name="lbl_distance_range_current">Max distance from current location</string>
    <string name="lbl_distance_range_other">Max distance from selected city center</string>
    <string name="lbl_location_policy">Location Policy</string>
    <string name="lbl_country_city">Country and city</string>
    <string name="lbl_my_place">My Place</string>
    <string name="lbl_seeker_place">Seeker Place</string>
    <string name="lbl_both">Both</string>
    <string name="lbl_lowest_acceptable_rating">Lowest acceptable rating</string>
    <string name="lbl_working_schedul">Working Schedule</string>
    <string name="lbl_sunday">Sunday</string>
    <string name="lbl_monday">Monday</string>
    <string name="lbl_tuesday">Tuesday</string>
    <string name="lbl_wednesday">Wednesday</string>
    <string name="lbl_thurseday">Thursday</string>
    <string name="lbl_friday">Friday</string>
    <string name="lbl_saturday">Saturday</string>
    <string name="lbl_start_time">Start Time</string>
    <string name="lbl_end_time">End Time</string>
    <string name="lbl_define_the_lowest_acceptable_rating_for_customer">Define the Lowest Acceptable Rating for Customers</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_location_with_colon">Location : %s</string>
    <string name="lbl_no_address">Address not specified.</string>
    <string name="lbl_add_beauty_service">Beauty Service</string>
    <string name="hint_service_category">Service Category</string>
    <string name="hint_service_name">Service Name</string>
    <string name="hint_service_description">Service Description</string>
    <string name="hint_service_average_time">Service Average Time</string>
    <string name="hint_service_average_price">Service Average Price (SR350)</string>
    <string name="lbl_add_picture">Add Picture</string>
    <string name="lbl_add_service">Add Service</string>
    <string name="lbl_update_service">Update Service</string>
    <string name="lbl_select_picture">Select Picture</string>
    <string name="lbl_more">More..</string>
    <string name="lbl_comments">Comments:</string>
    <string name="lbl_by">By:</string>
    <string name="lbl_quentity">Qty :</string>
    <string name="lbl_average_time">Avg. Time : %s</string>
    <string name="lbl_average_price">Price : SR %s</string>
    <string name="lbl_confirmed_appointment">Confirmed appointment : %s</string>
    <string name="lbl_location_policy_details">Location Policy : %s</string>
    <string name="lbl_trans_fees">Transportation fees</string>
    <string name="lbl_min_app_fees">Minimum appointment fees</string>
    <string name="lbl_trans_fees_with_value">Transportation fees : %s</string>
    <string name="lbl_min_app_fees_with_value">Minimum appointment fees : %s SR</string>
    <string name="lbl_date">Date : </string>
    <string name="lbl_default">0</string>
    <string name="lbl_advance_search">Advanced Search</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_Date">Date</string>
    <string name="lbl_select_time">Select Time</string>
    <string name="lbl_select_Date">Select Date</string>
    <string name="lbl_provider_place">Provider Place</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="lbl_minimum_price">Minimum Price</string>
    <string name="lbl_maximum_price">Maximum Price</string>
    <string name="lbl_minimum_rate">Minimum Rate</string>
    <string name="lbl_select_date_time">Select Date and Time</string>
    <string name="hint_enter_city">Enter City</string>
    <string name="hint_service_provider_name">Service / Provider Name</string>
    <string name="hint_select_country">Select Country</string>
    <string name="hint_select_city">Select City</string>
    <string name="lbl_min_price">Minimum appointment price</string>
    <string name="lbl_max_price">Maximum appointment price</string>
    <string name="lbl_period_of_auto">Period of appointment auto acceptance</string>
    <string name="lbl_directly_accept">Directly accept appointments booked</string>
    <string name="lbl_ahead_by">ahead by :</string>
    <string name="lbl_until">until :</string>
    <string name="lbl_days">Days(s)</string>
    <string name="lbl_months">Month(s)</string>
    <string name="lbl_book_an_appointment_">Boook an Appointment</string>
    <string name="lbl_services">Services</string>
    <string name="lbl_total_services_price">Total services price</string>
    <string name="lbl_check_availability">Check Availability</string>
    <string name="lbl_suggested_provider">Suggested Providers</string>
    <string name="lbl_pick_your_location">Pick your location</string>
    <string name="lbl_service_has_been_deleted">Service has been deleted</string>
    <string name="lbl_deposit">Deposit</string>
    <string name="lbl_provider_">Provider :</string>
    <string name="lbl_location_">Location :</string>
    <string name="lbl_appointment_confirmation_deposit">Appointment Confirmation Deposit</string>
    <string name="lbl_deposit_option">Deposit Option</string>
    <string name="lbl_sadad">SADAD</string>
    <string name="lbl_credit_card">Credit Card</string>
    <string name="lbl_paypal">PayPal</string>
    <string name="lbl_pay_deposit">Pay Deposit</string>
    <string name="lbl_paid_deposit">Confirmation deposit</string>
    <string name="lbl_cod">Cash on delivery</string>
    <string name="lbl_use_beautician_wallet">Use beautician Wallet</string>
    <string name="lbl_your_current_balance">(Your current balance is SR %1s)</string>
    <string name="lbl_select_option_to_pay">Select option to pay</string>
    <string name="lbl_appointment_details">Appointment Details</string>
    <string name="lbl_refrence_no">Reference No :</string>
    <string name="lbl_status">Status :</string>
    <string name="lbl_confirm_show_up">Confirm Show-Up</string>
    <string name="lbl_contact_no">Contact Detail :</string>
    <string name="lbl_seeker">Seeker :</string>
    <string name="lbl_cancel_appointment">Cancel Appointment</string>
    <string name="lbl_rate_user">Rate User</string>
    <string name="lbl_report_user_c">Report User</string>
    <string name="lbl_comments_">Comments</string>
    <string name="lbl_you_missed_appointment">you missed this appointment</string>
    <string name="lbl_buy_feature_ads">Buy Feature Ads</string>
    <string name="lbl_select_your_ads">Select your Ads type</string>
    <string name="lbl_category_page">Category page</string>
    <string name="lbl_search_result_ads">Search Result Ads</string>
    <string name="lbl_suggested_ads">Suggested Ads</string>
    <string name="lbl_select_period_time">Select period time</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_sun">SUN</string>
    <string name="lbl_mon">MON</string>
    <string name="lbl_tue">TUE</string>
    <string name="lbl_wed">WED</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_fri">FRI</string>
    <string name="lbl_sat">SAT</string>
</resources>