<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:contentDescription="@string/app_name"
            android:src="@drawable/beautician_logo" />

        <TextView
            android:id="@+id/dialog_social_login_textview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/myPrimaryColor"
            android:textSize="@dimen/text_large" />


        <EditText
            android:id="@+id/dialog_social_login_edittext_user_id"
            style="@style/edittext_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:hint="@string/hint_email_mobile" />


        <EditText
            android:id="@+id/dialog_social_login_edittext_password"
            style="@style/edittext_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/dialog_social_login_edittext_confirm_password"
            style="@style/edittext_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/dialog_social_login_textview_register"
            style="@style/button_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="center"
            android:text="@string/lbl_submit" />

    </LinearLayout>

</ScrollView>