<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/activity_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myPrimaryColor">

        <ImageView
            android:id="@+id/activity_forgot_password_imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_12"
            android:background="@drawable/menu_button_selector"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_back" />

        <TextView
            style="@style/textview_title_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10"
            android:layout_margin="@dimen/dimen_10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:src="@drawable/beautician_logo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/activity_forgot_password_textview_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/myPrimaryColor"
                android:textSize="@dimen/text_large" />


            <EditText
                android:id="@+id/activity_forgot_password_edittext_user_id"
                style="@style/edittext_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/hint_email_mobile" />



            <TextView
                android:id="@+id/activity_forgot_password_textview_register"
                style="@style/button_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:padding="@dimen/dimen_10"
                android:text="@string/lbl_request_a_verification_code" />

            <EditText
                android:id="@+id/activity_forgot_password_edittext_veridy_code"
                style="@style/edittext_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/hint_verify_code"
                android:inputType="number" />



            <EditText
                android:id="@+id/activity_forgot_password_edittext_password"
                style="@style/edittext_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/activity_forgot_password_edittext_confirm_password"
                style="@style/edittext_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/activity_forgot_password_textview_save"
                style="@style/button_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:padding="@dimen/dimen_10"
                android:text="@string/lbl_set_new_password" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>